# Cloud_project_2

./: .gitignore  Makefile  Project idee.txt  README.md  docker-compose.yml
adminer/: Dockerfile
services/agendaAPI/agendaAPIService/: Dockerfile  Makefile  go.mod  go.sum  gqlgen.yml  server.go  tools.go
services/agendaProto/: recommendations.proto
services/agendabotAPI/agendabotAPIService/: .dockerignore  Dockerfile  Makefile  requirements.txt
services/medicalDataAPI/medical-data-api-service/: .env.example  Dockerfile  codegen.ts  migrate-mongo-config.js  package-lock.json  package.json
services/menuAPI/menuAPIService/: Dockerfile  build.gradle  settings.gradle
services/menuProto/: build.gradle  settings.gradle
services/restaurantAPI/restaurantAPIService/: Dockerfile  build.gradle  init.sql  settings.gradle
services/sensorsAPI/sensorsAPIService/: CMakeLists.txt  Dockerfile  hospitalSensorData.cpp  hospitalSensorData.h  main.cpp
services/sensorsAPI/sensorsAPIService/cmake/: FindPahoMqttCpp.cmake
services/sensorsAPI/sensorsAPIService/sensors/: humiditySensor.cpp  humiditySensor.h  oxygenSensor.cpp  oxygenSensor.h  parkingSpaceSensor.cpp  parkingSpaceSensor.h  tempSensor.cpp  tempSensor.h
services/userProfileAPI/userProfileAPIService/: .dockerignore  .gitconfig  Dockerfile  Program.cs  userProfileAPIService.csproj  userProfileAPIService.http  userProfileAPIService.sln
website/: Dockerfile
website/laravel-app/: composer.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
website/laravel-app/routes/: web.php
(+104 files in other folders)
